--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <ul id=lista></ul>
+  <ul id="lista"></ul>
   <script src="./assets/js/main.js" charset="utf-8"></script>
 </body>
 </html>
