Stampo la lista solamente se è un cognome

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-
-  <ul id="lista"></ul>
+  <main>
+    <p id="wrong"></p>
+    <ul id="lista"></ul>
+  </main>
   <script src="./assets/js/main.js" charset="utf-8"></script>
 </body>
 </html>
