Inserisco la posizione nella lista

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <main>
     <p id="wrong"></p>
     <ul id="lista"></ul>
+    <p id="posizione"></p>
   </main>
   <script src="./assets/js/main.js" charset="utf-8"></script>
 </body>
